<resources>
    <string name="app_name">MEY</string>
    <string name="logo_app">Logo App</string>
    <string name="text_screen_one">Kenali Suasana Hatimu dengan Mudah</string>
    <string name="lewati">Lewati</string>
    <string name="Lanjut">Lanjut</string>
    <string name="text_description_one">Aplikasi MEY membantu mengenali suasana hatimu  melalui Pengenalan Ekpresi Wajah sehingga kamu dapat sehingga kamu dapat mengatasi suasuan hatimu dengan mudah dan cepat bersama MEY</string>
    <string name="gambar1">gambar1</string>
    <string name="text_screen_two">Kenali Playlistmu sesuai Moodmu setiap hari</string>
    <string name="text_description_two">Aplikasi MEY membantu untuk memutarkan lagu sesuai dengan ekspresi wajah yang anda scanning dengan mudah bersama MEY</string>
    <string name="text_screen_three">Buatlah Harimu Menjadi Lebih Produktif dengan mencatat Jadwal</string>
    <string name="text_description_three">Aplikasi MEY membantumu dalam mencatat Jadwal, membuat Reminder agar harimu lebih Produktif </string>
    <string name="finish">Selesai</string>
    <string name="login">Masuk</string>
    <string name="register_account">Buat Akun Baru</string>
    <string name="register">Daftar</string>
    <string name="your_name">Nama Lengkap</string>
    <string name="your_email">Surel</string>
    <string name="your_password">Password</string>
    <string name="your_exist_account">Sudah Punya Akun? Yuk Login</string>
    <string name="forgot_password">Lupa password</string>
    <string name="not_have_account">Belum Punya Akun ? Yuk Register</string>
    <string name="home">Home</string>
    <string name="music">Daftar Musik</string>
    <string name="welcome">Selamat Datang</string>
    <string name="how_your_mood">Bagaimana mood kamu ?</string>
    <string name="klik_musik">Klik Musik</string>
    <string name="senang">Senang</string>
    <string name="result_scan_face_you">Hasil Scan Wajah</string>
    <string name="sedih">Sedih</string>
    <string name="takut">Takut</string>
    <string name="netral">Netral</string>
    <string name="marah">Marah</string>
    <string name="terkejut">Terkejut</string>
    <string name="gambar_music">Gambar Music</string>
    <string name="deskripsi_music">Deskripsi Music</string>
    <string name="title_music">Title Music</string>
    <string name="daftar_lagu_berdasarkan_mood_senang_anda">Daftar lagu berdasarkan mood senang anda</string>
    <string name="scan_muka_anda">Scan Muka Anda</string>
    <string name="tahap_developer">Fitur ini masih dalam tahap pengembangan</string>
    <string name="gagal_ambil_gambar">Gagal mengambil gambar</string>
    <string name="gagal_menampilkan_camera">Gagal menampilkan camera</string>
    <string name="text_artist">Artist</string>
</resources>