<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/splash_screen_color"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_screen_one"
        android:layout_width="251dp"
        android:layout_height="274dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/gambar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_screen_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_screen_two"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/inactivate"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_screen_one"
        app:layout_constraintStart_toStartOf="@id/iv_screen_one"
        app:layout_constraintTop_toBottomOf="@id/iv_screen_one" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:id="@+id/text_description_screen_one"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        android:padding="8dp"
        android:maxLines="4"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_description_two"
        app:layout_constraintTop_toBottomOf="@id/text_screen_one"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:text="@string/Lanjut"
        android:id="@+id/btn_next_screen_one"
        app:cornerRadius="8dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_description_screen_one"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:text="@string/lewati"
        android:id="@+id/btn_skip_screen_one"
        app:cornerRadius="8dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_description_screen_one"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>