<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    app:cardBackgroundColor="@color/color_background_selected_cardview"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="10dp"
    android:id="@+id/containerMusic"
    android:layout_marginStart="5dp"
    android:elevation="5dp"
    android:clickable="true"
    android:background="@color/chip_background"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:src="@drawable/logo_icon"
            android:id="@+id/image_logo_music"
            android:layout_width="84dp"
            android:layout_height="86dp"
            android:contentDescription="@string/gambar_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_music"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/title_music"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/image_logo_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/image_logo_music"
            app:layout_constraintTop_toTopOf="@id/image_logo_music"
            app:layout_constraintVertical_bias="0.119" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_music"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/title_music"
            app:layout_constraintStart_toStartOf="@id/title_music"
            app:layout_constraintEnd_toEndOf="@id/title_music"
            android:textSize="12sp"
            android:id="@+id/description_music"
            android:layout_marginTop="5dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_artist"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/description_music"
            app:layout_constraintStart_toStartOf="@id/description_music"
            app:layout_constraintEnd_toEndOf="@id/description_music"
            android:textSize="12sp"
            android:id="@+id/artist_music"
            android:layout_marginTop="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>