<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/splash_screen_color"
    tools:context=".activity.home.ListDetailScan"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="0dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/splash_screen_color"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/containerImageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/gambar1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_scan_face_you"
                android:id="@+id/home"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/containerImageview"
                app:layout_constraintTop_toTopOf="@id/containerImageview"
                app:layout_constraintBottom_toBottomOf="@id/containerImageview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:contentDescription="@string/gambar1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/image_scan_user"
        android:src="@drawable/logo_icon"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="11dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/sedih"
        app:layout_constraintTop_toBottomOf="@id/image_scan_user"
        app:layout_constraintEnd_toEndOf="@id/image_scan_user"
        app:layout_constraintStart_toStartOf="@id/image_scan_user"
        android:id="@+id/result_text_scan_user"
        android:layout_marginTop="11dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/text_description_name"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:lines="2"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/result_text_scan_user"
        app:layout_constraintEnd_toEndOf="@id/result_text_scan_user"
        app:layout_constraintStart_toStartOf="@id/result_text_scan_user"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="0dp"
        android:background="@drawable/background_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description_name"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            tools:listitem="@layout/list_item_music"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>